# ragvocate

./: .env.example  .gitignore  .gitmodules  ImmigrationPoliciesData  README.md  pyproject.toml  rag.ipynb  rag.py  smith.py
app/: main.py  main_lan.py  main_report.py
app/api/: routes.py
app/core/: embedding_loader.py  langgraph_basic.py  langgraph_report_agent.py  langraph.py  rag.py
app/tests/: test_rag.py
backend/: Dockerfile  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: embedding_loader.py  langgraph_basic.py  langgraph_report_agent.py  rag.py
backend/app/tests/: test_rag.py
backend/scripts/: 2_precedents_scraper.py  3_precedents_metadata.py  6_build_vectorstore_statutes.py  7_build_vectorstore_precedents.py
frontend/app/: page.tsx
frontend/components/: SearchScopeSelector.tsx
frontend/lib/: api.ts
scripts/: 1_statutes_pdf_txt-md_extract.py  2_precedents_scraper.py  3_precedents_metadata.py  4_statutes_chunking_processor.py  5_precedents_chunking_processor.py  6_build_vectorstore_statutes.py  7_build_vectorstore_precedents.py
